--- a/core/static/core/css/main_index.css
+++ b/core/static/core/css/main_index.css
@@ -1,18 +1,22 @@
 @font-face {
     font-family: elon;
-    src: url(../fonts/elon.ttf);
+    src: url(../fonts/elon.ttf)
 }
+
 @font-face {
     font-family: valve;
-    src: url(../fonts/valve.ttf);
+    src: url(../fonts/valve.ttf)
 }
+
 @font-face {
     font-family: valve2;
-    src: url(../fonts/valve_2.ttf);
+    src: url(../fonts/valve_2.ttf)
 }
+
 body {
-    background: black;
+    background: black
 }
+
 video {
     position: fixed;
     min-width: 100%;
@@ -21,86 +25,73 @@ video {
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     z-index: -1;
-    filter: blur(5px);
+    filter: blur(5px)
 }
-
-
-
-
-
-
 
 .navbar {
     background-color: transparent !important;
-    margin: 5px;
+    margin: 5px
 }
-#navbarNav > ul > li.nav-item > a {
+
+#navbarNav>ul>li.nav-item>a {
     font-size: 22px;
-    padding: 20px;
+    padding: 20px
 }
+
 #me {
-    color: #f74843;
+    color: #f74843
 }
-
-
-
-
-
-
 
 header {
     margin-top: 90px;
     width: 100%;
-    margin-bottom: 70px;
+    margin-bottom: 70px
 }
-#header-texto{
+
+#header-texto {
     font-size: 20px;
-    margin-bottom: 60px;
+    margin-bottom: 60px
 }
 
 .header-content-left article {
-    color: lightgray;
+    color: lightgray
 }
 
 #places article {
     font-family: valve, monospace;
-    color: lightgray;
+    color: lightgray
 }
+
 .header-content-left article a {
     display: block;
     color: ghostwhite;
-    text-decoration: none;
+    text-decoration: none
 }
-.header-content-left article a:hover {
-    color: #f74843;
+
+#places>article a p:hover {
+    color: #f74843
 }
+
 div.header-content-right img {
-    padding-top: 50px;
+    padding-top: 50px
 }
-div.row{
+
+div.row {
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 10px
 }
 
-
-
-.title{
-    color: #f74843;
-}
-.container p{
-    color: white;
+.title {
+    color: #f74843
 }
 
-#header > div > div > div:nth-child(2) > div{
-    padding-top: 35%;
+.container p {
+    color: white
 }
 
-
-
-
-
-
-
+#header>div>div>div:nth-child(2)>div {
+    padding-top: 35%
+}
 
 footer {
     text-align: center;
@@ -110,51 +101,44 @@ footer {
     bottom: 0;
     position: static;
     background-color: #f74843;
-    font-family: 'Inconsolata', monospace;
-    
+    font-family: 'Inconsolata', monospace
 }
+
 #redes {
-    margin-top: 7px;;
+    margin-top: 7px
 }
-#redes ul{
-    margin-bottom: 10px;
+
+#redes ul {
+    margin-bottom: 10px
 }
+
 div.copy {
     margin-top: 0px;
     color: black;
-    position: relative;
+    position: relative
 }
+
 #redes ul a {
     font-family: elon, monospace;
     text-decoration: none;
     font-size: 15px;
     padding: 9px;
-
     color: white;
     transition: all 0.5s ease-in;
     -moz-transition: all 0.5s ease-in;
     -ms-transition: all 0.5s ease-in;
     -o-transition: all 0.5s ease-in;
-    -webkit-transition: all 0.5s ease-in;
-    }
+    -webkit-transition: all 0.5s ease-in
+}
+
 #redes ul a:hover {
     color: blue;
     transition: all 0.5s ease-out;
     -moz-transition: all 0.5s ease-out;
     -ms-transition: all 0.5s ease-out;
     -o-transition: all 0.5s ease-out;
-    -webkit-transition: all 0.5s ease-out;
+    -webkit-transition: all 0.5s ease-out
 }
-
-
-
-
-
-
-
-
-
-
 
 .color {
     color: snow;
@@ -164,28 +148,33 @@ div.copy {
     transition-delay: 1.5s;
     display: inline-block
 }
+
 .color.color-1:hover {
     -webkit-transition: color 0s;
     transition: color 0s;
-    color: #ffaa79;
+    color: #ffaa79
 }
+
 .color.color-2:hover {
     -webkit-transition: color 0s;
     transition: color 0s;
-    color: #b4fafa;
+    color: #b4fafa
 }
+
 .color.color-3:hover {
     -webkit-transition: color 0s;
     transition: color 0s;
-    color: #ff787d;
+    color: #ff787d
 }
+
 .color.color-4:hover {
     -webkit-transition: color 0s;
     transition: color 0s;
-    color: #efb1ed;
+    color: #efb1ed
 }
+
 .color.color-5:hover {
     -webkit-transition: color 0s;
     transition: color 0s;
-    color: #ffe484;
+    color: #ffe484
 }
