New app 'gallery'

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -50,7 +50,7 @@
                         </div>
                         
                         <div id="places">
-                            <article><a title="Bariloche" href="bariloche.html">
+                            <article><a title="Bariloche" href="{% url 'bariloche' %}">
                                     <h1 class="display-3">
                                         <P>Bariloche</P>
                                     </h1>
