--- a/gallery/templates/gallery/base.html
+++ b/gallery/templates/gallery/base.html
@@ -7,14 +7,17 @@
     {% load static %}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %} | Ever Toujours</title>
+
+    <link rel="stylesheet" href="{% static 'gallery/vendor/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'gallery/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'gallery/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'gallery/css/styles.css' %}">
+
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="bd-example">
+    <div class="bd-example" style="width: 100%;">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -22,31 +25,47 @@
                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
 
+
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="{% static 'gallery/photos/per3.jpg' %}" class="d-block w-100" alt="...">
+
+
+                {% for project in projects %}
+                <div class="carousel-item">
+                    <img src="{{project.image.url}}" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Titulo de ejemplo, numero 1</h5>
-                        <p>Descripcion inspiradora de foto numero 1.</p>
+                        <h5>{{project.title}}</h5>
+                        <p>{{project.description}}</p>
                     </div>
                 </div>
+                {% endfor %}
 
 
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+
+
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
-    </div>
+
+        <p class="h2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae animi et excepturi natus sunt
+            perferendis
+            corporis inventore cupiditate nesciunt amet, ea eaque quisquam maxime facilis ducimus culpa cumque nostrum
+            itaque!
+        </p>
 
 
 
-    <script src="{% static 'gallery/js/jquery.min.js' %}" charset="utf-8"></script>
-    <script src="{% static 'gallery/js/popper.min.js' %}" charset="utf-8"></script>
-    <script src="{% static 'gallery/js/bootstrap.min.js' %}" charset="utf-8"></script>
+
+        <script src="{% static 'gallery/js/jquery.min.js' %}" charset="utf-8"></script>
+        <script src="{% static 'gallery/js/popper.min.js' %}" charset="utf-8"></script>
+        <script src="{% static 'gallery/js/bootstrap.min.js' %}" charset="utf-8"></script>
 </body>
+
 </html>
