--- a/gallery/templates/gallery/base.html
+++ b/gallery/templates/gallery/base.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+        {% for project in projects %}
     <div class="bd-example" style="width: 100%;">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -25,11 +26,9 @@
                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
 
-
             <div class="carousel-inner">
 
-
-                {% for project in projects %}
+                
                 <div class="carousel-item">
                     <img src="{{project.image.url}}" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
@@ -37,9 +36,7 @@
                         <p>{{project.description}}</p>
                     </div>
                 </div>
-                {% endfor %}
-
-
+                
 
 
                 <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
@@ -52,13 +49,11 @@
                 </a>
             </div>
         </div>
-
-        <p class="h2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae animi et excepturi natus sunt
-            perferendis
-            corporis inventore cupiditate nesciunt amet, ea eaque quisquam maxime facilis ducimus culpa cumque nostrum
-            itaque!
+        <p class="display-4">
+            Descripcion general de ejemplo, debe contener unos cuantos caracteres.
         </p>
+
+        {% endfor %}
 
 
 
@@ -67,5 +62,4 @@
         <script src="{% static 'gallery/js/popper.min.js' %}" charset="utf-8"></script>
         <script src="{% static 'gallery/js/bootstrap.min.js' %}" charset="utf-8"></script>
 </body>
-
 </html>
