--- a/gallery/templates/gallery/base.html
+++ b/gallery/templates/gallery/base.html
@@ -17,45 +17,9 @@
 </head>
 
 <body>
-        {% for project in projects %}
-    <div class="bd-example" style="width: 100%;">
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-            </ol>
-
-            <div class="carousel-inner">
-
-                
-                <div class="carousel-item">
-                    <img src="{{project.image.url}}" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>{{project.title}}</h5>
-                        <p>{{project.description}}</p>
-                    </div>
-                </div>
-                
-
-
-                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-        <p class="display-4">
-            Descripcion general de ejemplo, debe contener unos cuantos caracteres.
-        </p>
-
-        {% endfor %}
-
-
+        {% block content%}
+        {% endblock %}
+        
 
 
         <script src="{% static 'gallery/js/jquery.min.js' %}" charset="utf-8"></script>
