--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -60,9 +60,9 @@
                                         <P>Buenos Aires</P>
                                     </h1>
                                 </a></article>
-                            <article><a title="Industrial" href="industrial.html">
+                            <article><a title="Example" href="{% url 'example' %}">
                                     <h1 class="display-3">
-                                        <P>Industrial</P>
+                                        <P>Example</P>
                                     </h1>
                                 </a></article>
                             <article><a title="People" href="people.html">
