--- a/gallery/templates/gallery/bariloche.html
+++ b/gallery/templates/gallery/bariloche.html
@@ -5,22 +5,19 @@
 
 
 
-{% block content%}
-<h1 class="display-1">Hola</h1>
+{% block content %}
 
-<!-- {% for photo in photos %} -->
-<div class="bd-example" style="width: 100%;">
+{% for photo in photos %}
+<div class="bd-example">
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
         </ol>
-
         <div class="carousel-inner">
 
-
-            <div class="carousel-item">
+            <div class="carousel-item active">
                 <img src="{{photo.image.url}}" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>{{photo.title}}</h5>
@@ -28,25 +25,20 @@
                 </div>
             </div>
 
-
-
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
+
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+
     </div>
-    <p class="display-4">
-        Descripcion general de ejemplo, debe contener unos cuantos caracteres.
-    </p>
+</div>
 
-{% if photo.link %}
-<p><a href="{{photo.link}}">Mas informacion</a></p>
-{% endif %}
+{% endfor %}
 
-<!-- {% endfor %} -->
 {% endblock %}
