--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -18,7 +18,7 @@
 
     {% block navbar %} {% endblock %}
             <div class="container">
-                <a title="Inicio" href="{% url 'home' %}"><img src="{% static 'core/img/logo.png' %}" title="Rerum System 0.1"
+                <a title="Inicio" href="{% url 'home' %}"><img src="{% static 'core/img/logos/logo.png' %}" title="Rerum System 0.1"
                         alt="Aqui debe estar el logo" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
