--- a/gallery/templates/gallery/bariloche.html
+++ b/gallery/templates/gallery/bariloche.html
@@ -6,7 +6,7 @@
 
 
 {% block content %}
-    
+    {% for photo in photos %}
     <div class="bd-example">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -15,10 +15,11 @@
                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-                    {% for photo in photos %}<div class="carousel-item active"><img src="{{photo.image.url}}" class="d-block w-100" alt="..."></div>{% endfor %}
+                    <div class="carousel-item active"><img src="{{photo.image.url}}" class="d-block w-100" alt="..."></div>
             </div>
+    {% endfor %}
     
-{% endblock %}
+
 
             <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -30,3 +31,4 @@
             </a>
         </div>
     </div>
+{% endblock %}
