--- a/gallery/templates/gallery/bariloche.html
+++ b/gallery/templates/gallery/bariloche.html
@@ -6,22 +6,25 @@
 
 
 {% block content %}
-    {% for photo in photos %}
+    
     <div class="bd-example">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" ></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"class="active"></li>
                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
-            <div class="carousel-inner">
-                    <div class="carousel-item active"><img src="{{photo.image.url}}" class="d-block w-100" alt="..."></div>
-            </div>
-    {% endfor %}
+            
+                <div class="carousel-inner">
+                        {% for photo in photos %}
+                        <div class="carousel-item active"><img src="{{photo.image.url}}" class="d-block w-100" alt="..."></div>
+                        {% endfor %}
+                    </div>
+            
     
 
 
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="{{photo.image.url[2]}}" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
