--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -3,7 +3,7 @@
 
 {% block title %}Home{% endblock %}
 {% block style %}<link rel="stylesheet" href="{% static 'core/css/main_index.css' %}">{% endblock %}
-{% block background %}<video src="{% static 'core/img/video/dark.mp4' %}" autoplay loop muted poster="{% static 'core/img/flower.jpg' %}"></video> {% endblock %}
+{% block background %}<video src="{% static 'core/img/video/paul.mp4' %}" autoplay loop muted poster="{% static 'core/img/flower.jpg' %}"></video> {% endblock %}
 
 
 {% block navbar %}<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">{% endblock %}
@@ -49,29 +49,17 @@
                         <div id="places">
                             <article><a title="Bariloche" href="{% url 'bariloche' %}"><h1 class="display-3">Bariloche</h1></a></article>
                             <article><a title="Bariloche" href="{% url 'example' %}"><h1 class="display-3">Ejemplo</h1></a></article>
-
                             <article><h1 class="display-3">Buenos Aires</h1></article>
-
                             <article><h1 class="display-3">Example</h1></article>
-
                             <article><h1 class="display-3">People</h1></article>
-
                             <article><h1 class="display-3">Italy</h1></article>
-
                             <article><h1 class="display-3">Zealand</h1></article>
-
                             <article><h1 class="display-3">Seattle</h1></article>
-
                             <article><h1 class="display-3">India</h1></article>
-
                             <article><h1 class="display-3">Tromsø</h1></article>
-
                             <article><h1 class="display-3">Turquía</h1></article>
-
                             <article><h1 class="display-3">Iceland</h1></article>
-
                             <article><h1 class="display-3">Switzerland</h1></article>
-
                             <article><h1 class="display-3">China</h1></article>
                         </div>
                     </div>
@@ -87,7 +75,7 @@
                                         </div>
                                         <div class="col-lg-7 col-md-8">
                                             <h2 class="mt-5 section-heading title">Consejos</h2>
-                                            <p>Podras encontrar una guia rapida para tomar la mejor imagen en el momento & lugar
+                                            <p>Podras encontrar una guia rapida para tomar la mejor imagen en el momento y lugar
                                                 adecuado.
                                             </p>
                                             <p><a href="http://google.com">Más información</a></p>
@@ -100,7 +88,7 @@
                                         </div>
                                         <div class="col-lg-7 col-md-8">
                                             <h2 class="mt-5 section-heading title">Equipo</h2>
-                                            <p>Equipos & dispositivos profesionales, podras encontrar detalles & mi experiencia de
+                                            <p>Equipos y dispositivos profesionales, podras encontrar detalles y mi experiencia de
                                                 cada dispositivo.
                                             <p><a href="{% url 'equipment' %}">Más información</a></p>
                                         </div>
