--- a/gallery/templates/gallery/example.html
+++ b/gallery/templates/gallery/example.html
@@ -4,7 +4,6 @@
 {% block title %}Example{% endblock %}
 
 
-
 {% block content %}
 <div class="bd-example">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -12,15 +11,10 @@
                 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active"><img src="{% static 'gallery/photos/ba1.jpg' %}" class="d-block w-100" alt="..."></div>
-
-                <div class="carousel-item"><img src="{% static 'gallery/photos/per1.jpg' %}" class="d-block w-100" alt="..."></div>
-
+                <div class="carousel-item active"><img src="{% static 'gallery/photos/per1.jpg' %}" class="d-block w-100" alt="..."></div>
                 <div class="carousel-item"><img src="{% static 'gallery/photos/per2.jpg' %}" class="d-block w-100" alt="..."></div>
-
                 <div class="carousel-item"><img src="{% static 'gallery/photos/ba3.jpg' %}" class="d-block w-100" alt="..."></div>
             </div>
 
@@ -34,6 +28,5 @@
             </a>
         </div>
     </div>
-
     <p style="font-display: center;" class="display-4">Descripcion general de Bariloche, debe contener unos cuantos caracteres</p>
 {% endblock %}
