--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -102,7 +102,7 @@
                                             <h2 class="mt-5 section-heading title">Sobre mi</h2>
                                             <p>Estudiante de Software, especializado en desarrollo web. Gracias por tu visita.</p>
                                             <br>
-                                            <p><a href="{% url 'equipment' %}">Más información</a></p>
+                                            <p><a href="http://sinconmasver.pythonanywhere.com/">Más información</a></p>
                                         </div>
                                     </div>
                             </div>
