--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -78,7 +78,7 @@
                                             <p>Podras encontrar una guia rapida para tomar la mejor imagen en el momento y lugar
                                                 adecuado.
                                             </p>
-                                            <p><a href="http://google.com">Más información</a></p>
+                                            <p><a target="blank" href="http://google.com">Más información</a></p>
                                         </div>
                                     </div>
 
@@ -102,7 +102,7 @@
                                             <h2 class="mt-5 section-heading title">Sobre mi</h2>
                                             <p>Estudiante de Software, especializado en desarrollo web. Gracias por tu visita.</p>
                                             <br>
-                                            <p><a href="http://sinconmasver.pythonanywhere.com/">Más información</a></p>
+                                            <p><a target="blank" href="http://sinconmasver.pythonanywhere.com/">Más información</a></p>
                                         </div>
                                     </div>
                             </div>
