--- a/gallery/templates/gallery/bariloche.html
+++ b/gallery/templates/gallery/bariloche.html
@@ -4,9 +4,7 @@
 {% block title %}Bariloche{% endblock %}
 
 
-
 {% block content %}
-    
     <div class="bd-example">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -14,16 +12,15 @@
                 <li data-target="#carouselExampleCaptions" data-slide-to="1"class="active"></li>
                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
-            
                 <div class="carousel-inner">
                     {% for photo in photos %}
-                    <div class="carousel-item active"><img src="{{photo.image.url}}" class="d-block w-100" alt="..."></div>
-                    {% endfor %}
+                        {% if forloop.first %}
+                            <div class="carousel-item active"><img src="{{photo.image.url}}" class="d-block w-100" alt="..."></div>
+                        {% else %}
+                            <div class="carousel-item"><img src="{{photo.image.url}}" class="d-block w-100" alt="..."></div>
+                        {% endif %}
+                    {%  endfor %}
                 </div>
-            
-    
-
-
             <a class="carousel-control-prev" href="carouselExampleCaptions" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
@@ -34,4 +31,5 @@
             </a>
         </div>
     </div>
+    <p style="font-display: center;" class="display-4">Descripcion general de Bariloche, debe contener unos cuantos caracteres</p>
 {% endblock %}
