Add Buenos Aires

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -48,16 +48,13 @@
                         
                         <div id="places">
                             <article><a title="Bariloche" href="{% url 'bariloche' %}"><h1 class="display-3">Bariloche</h1></a></article>
-                            <article><a title="Bariloche" href="{% url 'example' %}"><h1 class="display-3">Ejemplo</h1></a></article>
-                            <article><h1 class="display-3">Buenos Aires</h1></article>
-                            <article><h1 class="display-3">Example</h1></article>
-                            <article><h1 class="display-3">People</h1></article>
+{% comment %}               <article><a title="Buenos Aires" href="{% url 'ba' %}"><h1 class="display-3">Buenos Aires</h1></a></article>
+                            <article><a title="People" href="{% url 'people' %}"><h1 class="display-3">People</h1></a></article>
+                            <article><a title="Industrial" href="{% url 'industrial' %}"><h1 class="display-3">Industrial</h1></a></article> 
+{% endcomment %}
                             <article><h1 class="display-3">Italy</h1></article>
-                            <article><h1 class="display-3">Zealand</h1></article>
                             <article><h1 class="display-3">Seattle</h1></article>
-                            <article><h1 class="display-3">India</h1></article>
                             <article><h1 class="display-3">Tromsø</h1></article>
-                            <article><h1 class="display-3">Turquía</h1></article>
                             <article><h1 class="display-3">Iceland</h1></article>
                             <article><h1 class="display-3">Switzerland</h1></article>
                             <article><h1 class="display-3">China</h1></article>
