--- a/gallery/templates/gallery/ba.html
+++ b/gallery/templates/gallery/ba.html
@@ -8,7 +8,7 @@
     <div class="bd-example">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                    {% for photo in photos %}
+                    {% for ba in ba %}
                         {% if forloop.first %}
                             <div class="carousel-item active"><img src="{{ba.image.url}}" class="d-block w-100" alt="..."></div>
                         {% else %}
