--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -49,9 +49,8 @@
                         <div id="places">
                             <article><a title="Bariloche" href="{% url 'bariloche' %}"><h1 class="display-3">Bariloche</h1></a></article>
                             <article><a title="Buenos Aires" href="{% url 'ba' %}"><h1 class="display-3">Buenos Aires</h1></a></article>
-{% comment %}                             <article><a title="People" href="{% url 'people' %}"><h1 class="display-3">People</h1></a></article>
+                            <article><a title="People" href="{% url 'people' %}"><h1 class="display-3">People</h1></a></article>
                             <article><a title="Industrial" href="{% url 'industrial' %}"><h1 class="display-3">Industrial</h1></a></article> 
-{% endcomment %}
                             <article><h1 class="display-3">Italy</h1></article>
                             <article><h1 class="display-3">Seattle</h1></article>
                             <article><h1 class="display-3">Tromsø</h1></article>
