--- a/gallery/templates/gallery/bariloche.html
+++ b/gallery/templates/gallery/bariloche.html
@@ -10,9 +10,9 @@
                 <div class="carousel-inner">
                     {% for photo in photos %}
                         {% if forloop.first %}
-                            <div class="carousel-item active"><img src="{{photo.image.url}}" class="d-block w-100" alt="..."></div>
+                            <div class="carousel-item active"><img src="{{photo.image.url}}"  alt="..."></div>
                         {% else %}
-                            <div class="carousel-item"><img src="{{photo.image.url}}" class="d-block w-100" alt="..."></div>
+                            <div class="carousel-item"><img src="{{photo.image.url}}"  alt="..."></div>
                         {% endif %}
                     {%  endfor %}
                 </div>
