--- a/gallery/static/gallery/css/styles.css
+++ b/gallery/static/gallery/css/styles.css
@@ -8,3 +8,17 @@
     margin: 10px;
     text-align: justify;
 }
+
+body{
+    background-color: black;
+}
+
+img {
+    position: fixed;
+    min-width: 100%;
+    min-height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: -1;
+}
