--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="{% static 'core/css/font-awesome.min.css' %}">
     {% block style %}{% endblock %}
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+
+
+
+
 </head>
 
 <body>
@@ -18,7 +23,7 @@
 
     {% block navbar %} {% endblock %}
             <div class="container">
-                <a title="Inicio" href="{% url 'home' %}"><img src="{% static 'core/img/logos/logo.png' %}" title="Rerum System 0.1"
+                <a style="margin-top: 20px;" title="Inicio" href="{% url 'home' %}"><img src="{% static 'core/img/logos/logo.png' %}" title="Rerum System 0.1"
                         alt="Aqui debe estar el logo" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
