--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -48,7 +48,7 @@
                         
                         <div id="places">
                             <article><a title="Bariloche" href="{% url 'bariloche' %}"><h1 class="display-3">Bariloche</h1></a></article>
-                            <article><a title="Buenos Aires" href="{% url 'ba' %}"><h1 class="display-3">Buenos Aires</h1></a></article>
+                            <article><a title="Buenos Aires" href="{% url 'ba' %}"><h1 class="display-3">BA</h1></a></article>
                             <article><a title="People" href="{% url 'people' %}"><h1 class="display-3">People</h1></a></article>
                             <article><a title="Industrial" href="{% url 'industrial' %}"><h1 class="display-3">Industrial</h1></a></article> 
                             <article><h1 class="display-3">Italy</h1></article>
@@ -64,13 +64,13 @@
                 <div class="col-md-6">
                         <div id="derecho" class="header-content-right">
 
-                                <div class="container">
+                                <div style="margin-left: 50%; margin-right: 2%; margin-top: 70%;" class="container">
                                     <div class="row project">
-                                        <div class="col-lg-4 col-md-4 offset-lg-1">
-                                            <img class="img-fluid" src="{% static 'core/img/gadgets/camera_2.jpg' %}" alt="">
-                                        </div>
+                                        <!-- <div class="col-lg-4 col-md-4 offset-lg-1">
+                                            <img class="img-fluid border-danger-bottom danger"  src="{% static 'core/img/gadgets/camera_2.jpg' %}" alt="">
+                                        </div> -->
                                         <div class="col-lg-7 col-md-8">
-                                            <h2 class="mt-5 section-heading title">Consejos</h2>
+                                            <h1 class="mt-5 section-heading title display-5">Consejos</h1>
                                             <p>Podras encontrar una guia rapida para tomar la mejor imagen en el momento y lugar
                                                 adecuado.
                                             </p>
@@ -79,11 +79,11 @@
                                     </div>
 
                                     <div class="row project">
-                                        <div class="col-lg-4 col-md-4 offset-lg-1">
+                                        <!-- <div class="col-lg-4 col-md-4 offset-lg-1">
                                             <img class="img-fluid" src="{% static 'core/img/gadgets/drone4.jpg' %}" alt="">
-                                        </div>
+                                        </div> -->
                                         <div class="col-lg-7 col-md-8">
-                                            <h2 class="mt-5 section-heading title">Equipo</h2>
+                                            <h2 class="mt-5 section-heading title display-5">Equipo</h2>
                                             <p>Equipos y dispositivos profesionales, podras encontrar detalles y mi experiencia de
                                                 cada dispositivo.
                                             <p><a href="{% url 'equipment' %}">Más información</a></p>
@@ -91,11 +91,11 @@
                                     </div>
 
                                     <div class="row project">
-                                        <div class="col-lg-4 col-md-4 offset-lg-1">
+                                        <!-- <div class="col-lg-4 col-md-4 offset-lg-1">
                                             <img class="img-fluid" src="{% static 'core/img/body/ever.jpg' %}" alt="">
-                                        </div>
+                                        </div> -->
                                         <div class="col-lg-7 col-md-8">
-                                            <h2 class="mt-5 section-heading title">Sobre mi</h2>
+                                            <h2 class="mt-5 section-heading title display-5">Sobre mi</h2>
                                             <p>Estudiante de Software, especializado en desarrollo web. Gracias por tu visita.</p>
                                             <br>
                                             <p><a target="blank" href="http://sinconmasver.pythonanywhere.com/">Más información</a></p>
