--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -3,7 +3,7 @@
 
 {% block title %}Home{% endblock %}
 {% block style %}<link rel="stylesheet" href="{% static 'core/css/main_index.css' %}">{% endblock %}
-{% block background %}<video src="{% static 'core/img/video/paulvandyk.mp4' %}" autoplay loop muted poster="{% static 'core/img/flower.jpg' %}"></video> {% endblock %}
+{% block background %}<video src="{% static 'core/img/video/paulvandyk.mp4' %}" autoplay loop muted poster="{% static 'core/img/body/rick.jpg' %}"></video> {% endblock %}
 
 
 {% block navbar %}<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">{% endblock %}
