--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -21,21 +21,12 @@
 <body>
     {% block background %} {% endblock %}
 
-    {% block navbar %} {% endblock %}
-            <div class="container">
-                <a style="margin-top: 20px;" title="Inicio" href="{% url 'home' %}"><img src="{% static 'core/img/logos/logo.png' %}" title="Rerum System 0.1"
-                        alt="Aqui debe estar el logo" /></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        {% block color %}{% endblock %}
-                    </ul>
-                </div>
-            </div>
-        </nav> 
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark"></nav>
+        <div class="container">
+            <a style="margin-top: 20px;" title="Inicio" href="{% url 'home' %}"><img src="{% static 'core/img/logos/logo.png' %}" title="Rerum System 0.1"
+                    alt="Aqui debe estar el logo" /></a>
+        </div>
+    </nav> 
 
     {% block content %} {% endblock %}
 
