--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -6,16 +6,6 @@
 {% block background %}<video src="{% static 'core/img/video/paulvandyk.mp4' %}" autoplay loop muted poster="{% static 'core/img/body/rick.jpg' %}"></video> {% endblock %}
 
 
-{% block navbar %}<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">{% endblock %}
-
-{% block color %}
-   <!--  <li class="nav-item">
-        <a target="blank" class="nav-link text-white" href="http://sinconmasver.pythonanywhere.com/">Portafolio</a>
-    </li>
-    <li class="nav-item">
-        <a target="blank" class="nav-link text-white" href="http://sinconmasver.pythonanywhere.com/contact/">Contacto</a>
-    </li> -->
-{% endblock %}
 
 {% block content %}
 <header id="header">
@@ -60,17 +50,14 @@
                         </div>
                     </div>
                 </div>
+            
 
-                <div class="col-md-6">
+<!--                 <div class="col-md-6">
                         <div id="derecho" class="header-content-right">
-
-                                <div style="margin-left: 50%; margin-right: 2%; margin-top: 70%;" class="container">
+                                <div class="container">
                                     <div class="row project">
-                                        <!-- <div class="col-lg-4 col-md-4 offset-lg-1">
-                                            <img class="img-fluid border-danger-bottom danger"  src="{% static 'core/img/gadgets/camera_2.jpg' %}" alt="">
-                                        </div> -->
                                         <div class="col-lg-7 col-md-8">
-                                            <h1 class="mt-5 section-heading title display-5">Consejos</h1>
+                                            <h2 class="mt-5 section-heading title">Consejos</h2>
                                             <p>Podras encontrar una guia rapida para tomar la mejor imagen en el momento y lugar
                                                 adecuado.
                                             </p>
@@ -79,11 +66,8 @@
                                     </div>
 
                                     <div class="row project">
-                                        <!-- <div class="col-lg-4 col-md-4 offset-lg-1">
-                                            <img class="img-fluid" src="{% static 'core/img/gadgets/drone4.jpg' %}" alt="">
-                                        </div> -->
                                         <div class="col-lg-7 col-md-8">
-                                            <h2 class="mt-5 section-heading title display-5">Equipo</h2>
+                                            <h2 class="mt-5 section-heading title">Equipo</h2>
                                             <p>Equipos y dispositivos profesionales, podras encontrar detalles y mi experiencia de
                                                 cada dispositivo.
                                             <p><a href="{% url 'equipment' %}">Más información</a></p>
@@ -91,11 +75,8 @@
                                     </div>
 
                                     <div class="row project">
-                                        <!-- <div class="col-lg-4 col-md-4 offset-lg-1">
-                                            <img class="img-fluid" src="{% static 'core/img/body/ever.jpg' %}" alt="">
-                                        </div> -->
                                         <div class="col-lg-7 col-md-8">
-                                            <h2 class="mt-5 section-heading title display-5">Sobre mi</h2>
+                                            <h2 class="mt-5 section-heading title">Sobre mi</h2>
                                             <p>Estudiante de Software, especializado en desarrollo web. Gracias por tu visita.</p>
                                             <br>
                                             <p><a target="blank" href="http://sinconmasver.pythonanywhere.com/">Más información</a></p>
@@ -103,8 +84,9 @@
                                     </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
+            </div>
         </header>
 {% endblock %}
 
